<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/layout_add_place"
    tools:context=".MainActivity"
    android:padding="30dp"
    android:orientation="vertical"
    >

    <pt.atp.bucketlist.SquareImageView
        android:id="@+id/image_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:src="@drawable/insert"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:layout_marginTop="10dp"/>

</LinearLayout>