<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/description_user_profile"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/description_feed_actions"
            android:background="@drawable/ic_more_vert"/>

    </LinearLayout>

    <pt.atp.bucketlist.SquareImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_feed_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_camera"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:fontFamily="sans-serif"/>

</LinearLayout>